<resources>
    <string name="app_name">Contentful</string>
    <string name="content_decription">vehicle</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sign_in_menu_action">Sign In</string>
    <string name="sign_up_menu_action">Account Creation</string>
    <string name="create_account">Create Account</string>
    <string name="enter_full_name">Enter Full Name</string>
    <string name="enter_nickname">Enter Nick Name</string>
    <string name="enter_university_email">Enter University Email</string>
    <string name="use_nickname_only">Use Nickname only</string>
    <string name="password">Password</string>
    <string name="capital_letter">Capital Letter</string>
    <string name="number">Number</string>
    <string name="eight_characters">8 Characters</string>


    <string name="spinner_countryPrompt">Pick a Country</string>
    <string name="spinner_statePrompt">Pick a State/Province</string>


    <string-array name="country_arrays">
        <item>Please select a Country</item>
        <item>Canada</item>
        <item>United States</item>
    </string-array>

    <string-array name="canada">
        <item>Please select a Province</item>
        <item>Ontario</item>
        <item>Quebec</item>
        <item>British Columbia</item>
        <item>Nova Scotia</item>
        <item>Manitoba</item>
        <item>Alberta</item>
        <item>Saskatchewan</item>
        <item>New Brunswick</item>
        <item>Newfoundland and Labrador</item>
        <item>Prince Edward Island</item>
    </string-array>

    <string-array name="america">
        <item>Please select a State</item>
        <item>Alabama</item>
        <item>Alaska</item>
        <item>Arizona</item>
        <item>Arkansas</item>
        <item>California</item>
        <item>Colorado</item>
        <item>Connecticut</item>
        <item>Delaware</item>
        <item>District of Columbia</item>
        <item>Florida</item>
        <item>Georgia</item>
        <item>Hawaii</item>
        <item>Idaho</item>
        <item>Illinois</item>
        <item>Indiana</item>
        <item>Iowa</item>
        <item>Kansas</item>
        <item>Kentucky</item>
        <item>Louisiana</item>
        <item>Maine</item>
        <item>Maryland</item>
        <item>Massachusetts</item>
        <item>Michigan</item>
        <item>Minnesota</item>
        <item>Mississippi</item>
        <item>Missouri</item>
        <item>Montana</item>
        <item>Nebraska</item>
        <item>Nevada</item>
        <item>New Hampshire</item>
        <item>New Jersey</item>
        <item>New Mexico</item>
        <item>New York</item>
        <item>North Carolina</item>
        <item>North Dakota</item>
        <item>Ohio</item>
        <item>Oklahoma</item>
        <item>Oregon</item>
        <item>Pennsylvania</item>
        <item>Rhode Island</item>
        <item>South Carolina</item>
        <item>South Dakota</item>
        <item>Tennessee</item>
        <item>Texas</item>
        <item>Utah</item>
        <item>Vermont</item>
        <item>Virginia</item>
        <item>Washington</item>
        <item>West Virginia</item>
        <item>Wisconsin</item>
        <item>Wyoming</item>
    </string-array>


</resources>
